src/objects/X4PlanningProPresupuesto__c.object
<CustomObject>
    <fields>
        <fullName>Anio__c</fullName>
        <label>Año</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anioo__c</fullName>
        <label>Añoo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categoria__c</fullName>
        <label>Categoria</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fijo</fullName>
                </value>
                <value>
                    <fullName>Móvil</fullName>
                </value>
                <value>
                    <fullName>Convergente</fullName>
                </value>
                <value>
                    <fullName>Digital - IoT</fullName>
                </value>
                <value>
                    <fullName>Digital - Cloud</fullName>
                </value>
                <value>
                    <fullName>Digital - Seguridad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FourPlanning__c</fullName>
        <label>FourPlanning</label>
        <referenceTo>FourPlanning__c</referenceTo>
        <relationshipLabel>4PlanningProPresupuestos</relationshipLabel>
        <relationshipName>X4PlanningProPresupuestos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Presupuesto_Competencia__c</fullName>
        <label>Presupuesto Competencia</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presupuesto_Disponible__c</fullName>
        <label>Presupuesto Disponible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presupuesto_Nosotros__c</fullName>
        <label>Presupuesto Nosotros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Presupuesto_Total__c</fullName>
        <label>Presupuesto Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>4PlanningProPresupuesto</label>
    <nameField>
        <label>Nombre de 4PlanningProPresupuesto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>4PlanningProPresupuestos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>